--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-dom": "18.2.0",
     "react-use-window-size": "^1.0.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0"
   }
 }
