--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-use-window-size": "^1.0.1",
+    "tss-react": "^4.6.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
