--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.5",
     "react-use-window-size": "^1.0.1",
-    "typescript": "4.9.4"
+    "tss-react": "^4.6.0",
+    "typescript": "4.9.4",
+    "react-markdown": "^8.0.5"
+   
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.0"
