--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-dom": "18.2.0",
     "react-use-window-size": "^1.0.1",
     "tss-react": "^4.6.0",
-    "typescript": "4.9.4",
-    "react-markdown": "^8.0.5"
+    "typescript": "4.9.4"
    
   },
   "devDependencies": {
