--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/canvas-confetti": "^1.6.0"
   }
 }
