--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^0.1.11",
     "canvas-confetti": "^1.6.0",
     "date-fns": "^2.29.3",
     "eslint": "8.31.0",
